--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
         <li>Vagrant</li>
         <li>Docket</li>
         <li>Ansible</li>
-        <li>Integración Contínua</li>
+        <li>Integración Contínua: Madurez y Productividad en el Desarrollo de Software</li>
     </ul>
 </body>
 </html>
