--- a/index.html
+++ b/index.html
@@ -12,6 +12,7 @@
         <li>Docket</li>
         <li>Ansible</li>
         <li>Integración Contínua: Madurez y Productividad en el Desarrollo de Software</li>
+        <li>Kubernetes</li>
     </ul>
 </body>
 </html>
