--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
     <ul>
         <li>Vagrant: Gerenciando máquinas virtuales</li>
         <li>Docket: Creando containers sin dolor de cabeza</li>
-        <li>Ansible</li>
+        <li>Ansible: Su Infraestructura como código</li>
         <li>Integración Contínua: Madurez y Productividad en el Desarrollo de Software</li>
         <li>Kubernetes: Introducción a la orquestación de containers</li>
     </ul>
